[package]
name = "bloock-merkletree-rs"
version = "0.1.1"
edition = "2021"
authors = [
    "Marc Baqué <marc@bloock.com>",
    "Eduard Tomàs <eduard.tomas@bloock.com>",
]
description = "Merkle tree implementation compatible with Polygon ID"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bloock/bloock-merkletree-rs"

[dependencies]
bloock-poseidon-rs = "0.1.5"
async-trait = "0.1.72"
async-recursion = "1.0.4"
thiserror = "1.0.44"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
